SONAR-12434 Increase contrast of issue location count

--- a/server/sonar-web/src/main/js/apps/issues/styles.css
+++ b/server/sonar-web/src/main/js/apps/issues/styles.css
@@ -107,7 +107,7 @@
 }
 
 .concise-issue-box:not(.selected) .location-index {
-  background-color: #ccc;
+  background-color: var(--secondFontColor);
 }
 
 .concise-issue-locations {
